# hatpin

./: .gitignore  README.md  pyproject.toml
docs/: phase1-apscheduler-spec-and-plan.md  phase1-huey-spec-and-plan.md  phase1-transitions-spec-and-plan.md  phase2-huey-transitions-findings.md  phase2-huey-transitions-spec-and-plan.md  research-workflow-engines-phase0-1-findings.md  research-workflow-engines.md  spec-huey-transitions-hybrid.md  spec-phase0-workflow-persistence.md  workflow-engine.md
docs/adr/: 0001-unified-workflow-gate-protocol.md
hatpin/: __main__.py  context.py  display.py  engine.py  stage.py  types.py  workflow_gate.py
hatpin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hatpin/tools/: git.py  github.py  plan.py  stage_complete.py
hatpin/workflow_spikes/: huey_transitions.py  spike_gates.py  state_paths.py
hatpin/workflows/: issue.py
plans/: workflow-engine.md  workflow-fixes.md
tests/hatpin/: test_cli.py  test_config.py  test_context.py  test_display.py  test_engine.py  test_git_tools.py  test_github_tools.py  test_issue_workflow.py  test_plan_tool.py  test_spike_huey_transitions.py  test_stage_complete.py  test_stage_runner.py  test_types.py  test_workflow_gate.py
tests/workflow/: test_cli.py  test_config.py  test_context.py  test_display.py  test_engine.py  test_git_tools.py  test_github_tools.py  test_issue_workflow.py  test_plan_tool.py  test_stage_complete.py  test_stage_runner.py  test_types.py
workflow/: README.md  __main__.py  config.py  context.py  display.py  engine.py  stage.py
workflow/tools/: git.py  (+2 more)
(+8 files in other folders)
