[project]
name = "hatpin"
version = "0.1.0"
description = "Semi-deterministic workflow engine for LLM-based agents"
requires-python = ">=3.13"
dependencies = [
    "corvidae @ file:///Users/yozgrahame/code/corvidae",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "huey",
    "transitions",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 10
